2008-05-02  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-info-breakpoints-custom): Don't
	throw error if no file is found.

2008-05-02  Juanma Barranquero  <lekktu@gmail.com>

	* vc-hooks.el (vc-call, vc-state): Fix typos in docstrings.
	(vc-default-state-heuristic): Doc fix.

2008-05-02  Richard Sharman  <rsharman@pobox.com>

	* hilit-chg.el (highlight-changes-mode): Removed references to
	hooks that no longer exist.  Because define-minor-mode is used the
	hook highlight-changes-mode-hook exists and can do what both the
	old hooks used to do.  The documentation at the top of the file
	was updated to demonstrate this.
	(highlight-changes-mode): Remove commented out call to a hook
	function that is no longer there.
	(hilit-chg-set): Remove running of highlight-changes-enable-hook.

2008-05-02  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-default-dired-state-info): Change name of primitive
	to prettify-state-info, in preparation for ripping out dired mode.
	* vc-bzr.el (vc-bzr-dired-state-info): Change name of primitive
	to prettify-state-info, in preparation for ripping out dired mode.
	* vc-hooks.el (vc-toggle-read-only): Throw an error when a user
	tries this on a version-controlled buffer.  It will do useless or
	actively bad things on any version control system newer than RCS.
	* vc-hooks.el (vc-dired-resynch-file):
	* vc.el (vc-dired-resynch-file): Change name of primitive to
	vc-directory-resynch-file, preparing to remove dired.

2008-05-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-rcs.el (vc-rcs-state): Fix typos.

	* vc.el (vc-register): Change argument order so that the prefix
	argument is assigned correctly.
	(vc-next-action, vc-dir-register): Update for the above change.

2008-05-01  Juri Linkov  <juri@jurta.org>

	* replace.el (occur-read-primary-args): Set default to the car of
	regexp-history and display it in the prompt, but don't add to the
	list of minibuffer defaults.  Bind history-add-new-input to nil to